swr, react-qeury 비교용 라우트 작업

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     ],
     "rules": {
         "@typescript-eslint/explicit-module-boundary-types": "off",
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "prefer-const": "off"
     }
 }
