--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.10.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "swr": "^0.5.6",
