--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.10.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-query": "^3.18.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "swr": "^0.5.6",
