--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.10.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-lazyload": "^3.2.0",
     "react-query": "^3.18.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -25,6 +26,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.2",
+    "@types/react-lazyload": "^3.1.1",
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
