--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "react-hook-form": "^7.10.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-lazyload": "^3.2.0",
+    "react-modal": "^3.14.3",
     "react-query": "^3.18.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "swr": "^0.5.6",
-    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
@@ -29,6 +29,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.2",
     "@types/react-lazyload": "^3.1.1",
+    "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
@@ -39,7 +40,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
