--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-query": "^3.18.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-use": "^17.2.4",
     "swr": "^0.5.6",
     "web-vitals": "^1.0.1"
   },
