--- a/package.json
+++ b/package.json
@@ -8,19 +8,18 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "masonic": "^3.4.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.10.1",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-lazyload": "^3.2.0",
     "react-modal": "^3.14.3",
     "react-query": "^3.18.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-use": "^17.2.4",
+    "react-virtualized": "^9.22.3",
+    "react-virtualized-image-measurer": "^0.4.0",
     "swr": "^0.5.6",
     "web-vitals": "^1.0.1"
   },
@@ -33,6 +32,7 @@
     "@types/react-lazyload": "^3.1.1",
     "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-virtualized": "^9.21.12",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
