--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -20,6 +19,7 @@
     "react-use": "^17.2.4",
     "react-virtualized": "^9.22.3",
     "react-virtualized-image-measurer": "^0.4.0",
+    "styled-components": "^5.3.0",
     "swr": "^0.5.6",
     "web-vitals": "^1.0.1"
   },
@@ -33,6 +33,7 @@
     "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-virtualized": "^9.21.12",
+    "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
@@ -43,6 +44,9 @@
     "husky": "^7.0.1",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.2",
+    "styled-normalize": "^8.0.7",
+    "tailwindcss": "^2.2.7",
+    "twin.macro": "^2.6.2",
     "typescript": "^4.3.5"
   },
   "scripts": {
@@ -75,5 +79,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components",
+      "styled": {
+        "import": "default",
+        "from": "styled-components"
+      },
+      "css": {
+        "import": "css",
+        "from": "styled-components"
+      }
+    }
   }
 }
