--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-use": "^17.2.4",
     "react-virtualized": "^9.22.3",
     "react-virtualized-image-measurer": "^0.4.0",
+    "recoil": "^0.4.0",
     "styled-components": "^5.3.0",
     "swr": "^0.5.6",
     "web-vitals": "^1.0.1"
