--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.10.1",
+    "react-icons": "^4.2.0",
     "react-modal": "^3.14.3",
     "react-query": "^3.18.1",
     "react-router-dom": "^5.2.0",
@@ -37,6 +38,8 @@
     "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "babel-plugin-macros": "^3.1.0",
+    "customize-cra": "^1.0.0",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -45,15 +48,16 @@
     "husky": "^7.0.1",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.2",
+    "react-app-rewired": "^2.1.8",
     "styled-normalize": "^8.0.7",
     "tailwindcss": "^2.2.7",
     "twin.macro": "^2.6.2",
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "start": "BROWSER=none react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "BROWSER=none react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "prepare": "husky install"
   },
   "lint-staged": {
