--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@jjordy/swr-devtools": "^1.0.5",
+    "@popperjs/core": "^2.9.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,6 +16,7 @@
     "react-hook-form": "^7.10.1",
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.3",
+    "react-popper": "^2.2.5",
     "react-query": "^3.18.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
