--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "dompurify": "^2.3.0",
+    "i18next": "^20.3.5",
+    "i18next-browser-languagedetector": "^6.1.2",
     "ismobilejs": "^1.1.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.10.1",
+    "react-i18next": "^11.11.4",
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.3",
     "react-popper": "^2.2.5",
@@ -30,6 +34,7 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@types/dompurify": "^2.2.3",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
