--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,27 @@
 {
-  "plugins": ["macros"]
+  "plugins": [
+    "macros",
+    [
+      "styled-components",
+      {
+        "ssr": true,
+        "displayName": true,
+        "preprocess": false
+      }
+    ]
+  ],
+  "env": {
+    "production": {
+      "plugins": [
+        [
+          "styled-components",
+          {
+            "ssr": true,
+            "displayName": false,
+            "preprocess": false
+          }
+        ]
+      ]
+    }
+  }
 }
