--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-styled-components": "^1.13.2",
     "customize-cra": "^1.0.0",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
