Repo username 변경

--- a/package.json
+++ b/package.json
@@ -110,5 +110,5 @@
       }
     }
   },
-  "homepage": "http://sweetmilkys.github.io/fixabay"
+  "homepage": "http://danah-kim.github.io/fixabay"
 }
